samples/_failures_safe/1761042956_707a74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d33723f5.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_d33723f5.c:168:12: error: expected ‘,’ or ‘;’ at end of input
  168 |     struct GraphNode *current = graph
      |            ^~~~~~~~~
./samples/SAFE/__tmp_d33723f5.c:168:12: error: expected declaration or statement at end of input
